@@ -729,9 +729,7 @@ class HttpMessage:
 
             chunk = bytes(chunk)
             chunk_len = '{:x}\r\n'.format(len(chunk)).encode('ascii')
-            self.transport.write(chunk_len)
-            self.transport.write(chunk)
-            self.transport.write(b'\r\n')
+            self.transport.write(chunk_len + chunk + b'\r\n')
             self.output_length += len(chunk_len) + len(chunk) + 2
 
     def _write_length_payload(self, length):
